fix tweet button and counter alignment

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -49,17 +49,20 @@
   border-color: rgb(77, 74, 74);
 }
 #tweetButton{
-  background-color:#746363;
-  border-color: rgb(100, 98, 98);
+  background-color:#313642;
+  border-color: #282d36;
   border-style: solid; 
   border-width: 3px;
   margin: 0 auto;
-  margin-top: 15px;
-  font-size: 32px;
+  /* margin-top: 15px; */
+  font-family: 'Bungee', sans-serif;
+  /* font-size: 32px; */
   color: white;
 }
 #counter{
+  margin-top: 5px;
   font-family: 'Bungee', sans-serif;
+  margin-right: 5px;
 }
 @media (min-width: 1340px) {
   #topHeader {
